# Calc_boolean_expression

./: .gitignore  CMakeLists.txt  Dockerfile  Error.h  Main.py  README.md  boolcalc.cpp  boolexpr.cpp  boolexpr.h  requirements.txt  test.cpp
src/: Error.h  boolcalc.cpp  boolexpr.cpp  boolexpr.h  test.cpp
